Devops/Kubernates/Ingress/ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: task-manager-ingress
  namespace: task-manager

spec:
  ingressClassName: nginx

  rules:
  - host: taskmanager.local

    http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port: 
              number: 80
      
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
